# audio-visualizer

./: Cargo.toml  Dockerfile
src/: audio.rs  main.rs
static/: index.html
