[package]
name = "audio-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
cpal = "0.15"
rustfft = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"